finally done with the landing page During the project i noticed that my page was fixed at a point when i used overflow:hidden at the body so I got rid of it

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 body{
   height: 100vh;
-  margin: 0;
-  overflow: hidden;
+  width: 100vw;
   font-family: Roboto, sans-serif;
   display: flex;
   flex-direction: column;
-
 }
 
 ul{
@@ -15,13 +18,18 @@ ul{
 a{
     text-decoration: none;
 }
+
+.hl{
+    font-size: 24px;
+}
 .header{
     background-color: #1f2937;
     display: flex;
     flex-direction: column;
     justify-content: center;
     color: white;
-    padding: 5px 230px;
+    padding: 15px 230px;
+    width: 100vw;
 }
 
 .logo{
@@ -45,22 +53,25 @@ button{
     cursor: pointer;
     padding: 8px 16px;
     border-radius: 8px;
-   background-color: rgb(83, 83, 189);
-    width:100px;
+   background-color: rgb(49, 96, 199);
+    width:150px;
+    color: #f9faf8;
+    padding: 10px 5px;
+    font-size: 20px;
+    border: none;
 }
 
 .right_links{
     display: flex;
     margin-left: auto;
     gap:20px;
-
 }
 
 .image{
-    background-color: aqua;
-    width: 500px;
+    background-color: rgb(81, 97, 97);
+    width: 1000px;
     height: 250px;
-    flex-shrink: 0;
+    
 }
 
 .main_text{
@@ -75,6 +86,114 @@ button{
     margin-bottom: 15px;
 }
 
-.header_text{
-    
+p{
+    font-size: 15px;
+    text-align: center;
+    color: #62666d;
+}
+.info_section{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 80px;
+}
+
+.info_head{
+    font-size: 36px;
+    color:#1F2937;
+    font-weight: 800;
+    text-align: center;
+    margin: 50px 0;
+}
+
+.info_image{
+    width:150px;
+    height: 150px;
+    border:3px solid #2431a3 ;
+    border-radius: 10px;
+}
+
+.sub_text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:35px;
+}
+
+.info_wrap{
+    max-width: 150px;
+    flex-wrap: wrap;
+}
+
+.quote{
+    background-color: #E5E7EB;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 60px;
+}
+
+.quote > .size > p{
+    font-size: 36px;
+    font-style: italic;
+    margin-bottom: 10px;
+}
+
+.size{
+    width: 800px;
+}
+
+.p_right{
+    display: flex;
+    justify-content: flex-end;
+    font-weight: 700;
+    font-size: 25px;
+}
+
+.action{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 300px;
+    padding: 20px;
+    margin: 70px 0;
+}
+
+.blue{
+    background-color: #3882F6;
+    width: 900px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: baseline;
+    padding: 30px;
+    border-radius: 10px;
+}
+
+.btn_right{
+    border: 2px solid white;
+}
+
+b{
+   color:aliceblue; 
+   font-size: 30px; 
+   margin-bottom: 0px;  
+}
+
+.txt_color >  p{
+    color: aliceblue;
+    margin-top: 5px;
+}
+
+footer{
+    background-color: #1F2937;
+    padding: 20px;
+}
+
+footer > p{
+    font-size: 20px;
+    color: #a0a997;
 }
